--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-## 初始化skywalking java agent
+## 初始化Jacoco java agent
 
-### 实现自动为部署至k8s集群的java服务注入skywalking agent和所需环境变量，目前支持deployment和statefulset两种控制器的java服务。
+### 实现自动为部署至k8s集群的java服务注入jacoco agent和所需环境变量，目前支持deployment和statefulset两种控制器的java服务。
 
